@@ -2360,6 +2360,23 @@ test interp-28.1 {getting fooled by slave's namespace ?} {
     set r
 } {}
 
+test interp-28.2 {master's nsName cache should not cross} {
+    set i [interp create]
+    set res [$i eval {
+	set x {namespace children ::}
+	set y [list namespace children ::]
+	namespace delete [{*}$y]
+	set j [interp create]
+	$j eval {namespace delete {*}[namespace children ::]}
+	namespace eval foo {}
+	set res [list [eval $x] [eval $y] [$j eval $x] [$j eval $y]]
+	interp delete $j
+	set res
+    }]
+    interp delete $i
+    set res
+} {::foo ::foo {} {}}
+
 # Part 29: recursion limit
 #  29.1.*  Argument checking
 #  29.2.*  Reading and setting the recursion limit
